# teco-ops

./: .clang-format  .gitignore  LICENSE  README.md  build.sh  env.sh  requirements.txt  setup.py
api/: torch_ext.cpp
api/tecoops/: __init__.py
common/: teco_kernel_context.h  tensor.h
cuda/: CMakeLists.txt
doc/: README_OP.md  README_PYTHON.md
doc/op_docs/: rms_norm.md
examples/: axpy_example.py
plugin_test/: test_plugin_rms_norm.py
python_api_test/: test_axpy.py  test_flash_attention.py  test_flatten_rays.py  test_reshape_and_cache.py  test_rms_norm.py
teco/: CMakeLists.txt
teco/interface/common/: check.h  convert.cpp  convert.h  handle.cpp  handle.h  marco.h  tensor.cpp  tensor.h
teco/interface/include/: tecoops.h
teco/interface/ops/: flatten_rays.cpp  memset.cpp  morton3D_invert.cpp  reduce_variance.cpp  rms_norm.cpp
teco/plugin/pluginRmsNorm/: plugin_rms_norm.cc
teco/ual/args/: flatten_rays_args.h  morton3D_invert_args.h  rms_norm_args.h
teco/ual/com/: convert.hpp  def.h  log.h  rt.h  status.h
teco/ual/kernel/: macro.h
teco/ual/kernel/flash_attention/: flash_attention.scpp
teco/ual/kernel/flatten_rays/: flatten_rays.h  flatten_rays.scpp
teco/ual/kernel/morton3D_invert/: morton3D_invert.h  morton3D_invert.scpp
teco/ual/kernel/reduce_variance/: reduce_variance_axis_left_float.scpp  reduce_variance_axis_middle_float.scpp
teco/ual/kernel/rms_norm/: rms_norm.h  rms_norm_fp16.scpp
teco/ual/ops/: base_op.hpp
teco/ual/ops/flatten_rays/: find_flatten_rays.cpp  find_flatten_rays.h  flatten_rays.hpp
teco/ual/ops/morton3D_invert/: find_morton3D_invert.cpp  find_morton3D_invert.h  morton3D_invert.hpp
teco/ual/ops/rms_norm/: find_rms_norm.cpp  find_rms_norm.h  rms_norm.hpp
test/: .gitignore  CMakeLists.txt  LICENSE  build.sh  deps.py  env.sh  main.cpp  test.cpp
test/config/: criterions.json
test/src/case/: case_collector.cpp  case_collector.h  criterion.cpp  criterion.h  evaluator.cpp  evaluator.h  parser.cpp  parser.h  pb_tools.cpp  pb_tools.h
test/src/common/: bfloat16.cpp  bfloat16.h  context.h  half.hpp  md5.cpp  md5.h  tecoallog.cpp  tecoallog.h  tecotest.cpp  tecotest.h  time.hpp  tools.cpp  tools.h  variable.h
test/src/device/: device.cpp  device.h
test/src/device/cuda/: common.h  memory.cpp  memory.h  profiler.cpp  profiler.h  version.cpp  version.h
test/src/suite/: env.cpp  env.h  executor.cpp  executor.h  suite.cpp  suite.h
test/test_proto/: .gitignore  gen_proto.py  generate.sh  optest.proto  tecokernel.proto  tensor.proto
test/test_proto/tecokernel/: rms_norm.proto
test/test_tools2/: .gitignore  CMakeLists.txt  gen_daily_diff.py  getTecoalNode.py  pr_test_v2.py  tecoalCase.py  tecoalLog.py  tecoalNode.py  tecoalReport.py  tecoalResult.py  tecoalTest.py
test/test_tools2/auto_gen/: autogen_api_node.py  autogen_getTecoalNode.py
test/test_tools2/nodes/: arg_max_node.py  masked_fill_node.py  scale_tensor_node.py  scatter_out_node.py  unary_ops_node.py  unique_node.py
test/test_tools2/nodes/template/: arg_max.prototxt  masked_fill.prototxt  scale_tensor.prototxt  scale_tensor_node.py  scatter_out.prototxt  unary_ops.prototxt  unique.prototxt
test/test_tools2/sample/: cases_list.txt  daily_test_template.md  long_term_stability_report.py  merge_excel.py  sample_diffLog.py  sample_genCase.py  sample_tecoalCase.py  sample_tecoalCaseCheck.py  sample_tecoalLog.py  sample_tecoalReport.py  sample_tecoalResult.py  sample_tecoalTest.py
test/test_tools2/sample/model_dedu/: dedu_utils.py  genAlldict.py  node_utils.py  single_model_dedu.py
test/test_tools2/sample/test_case/add_tensor/: case_0.prototxt
test/test_tools2/sample/test_case/embedding_forward/: case_0.prototxt
test/tools/: al_run.py  commit-msg  commit_template  commitlint.py  cpplint_check.sh  daily_unite_test.py  deal_cases_list.py  deduplicate_cases.py  diff_log.py  diff_tecoal.py  extractor.py  format2google  gen_oa_cmd.py  gen_rank.py  gtest_style.py  modify_test_params.py  parse_result.py  pb2prototxt.cpp  pre-commit  prototxt2pb.cpp  register_op.py  requirements.txt  title_info.json  unit_test.py  unit_test_v2.py
test/tools/gen_case/: gen_case_dir.py  gen_random.py  gen_tensor.py
test/tools/self_test/: GitRepository.py  check_self_test_result.py  gen_run_self_test.py  pre_check.py
test/tools/tecoal_db/: baseline_from_db.py  baseline_to_db.py  case_from_db.py  case_parser.py  case_to_db.py  deal_model_case.py  get_data_utils.py  model.py  model_db.py  result_from_db.py  result_parser.py  result_to_db.py
test/zoo/: autoGenTecotestCode.py  auto_gen.py  tecozoo.h
test/zoo/teco/: convert.cpp  convert.h  executor.cpp  executor.h  executor.py
tools/: CPPLINT.cfg  auto_gen_test_code.py  ci_test.sh  commit-msg  commit_template  format2google  get_op.py  pre-commit
(+37 files in other folders)
